--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         "easycorp/easyadmin-bundle": "^2.3",
         "knplabs/knp-markdown-bundle": "^1.8",
         "sensio/framework-extra-bundle": "^5.1",
+        "stof/doctrine-extensions-bundle": "^1.4",
         "symfony/apache-pack": "^1.0",
         "symfony/asset": "5.0.*",
         "symfony/console": "5.0.*",
@@ -34,6 +35,7 @@
         "wa72/htmlpagedom": "^2.0"
     },
     "require-dev": {
+        "doctrine/doctrine-fixtures-bundle": "^3.3",
         "symfony/debug-pack": "*",
         "symfony/maker-bundle": "^1.0",
         "symfony/phpunit-bridge": "^5.0",
