--- a/config/packages/easy_admin.yaml
+++ b/config/packages/easy_admin.yaml
@@ -1,6 +1,9 @@
 easy_admin:
-   entities:
-#        # List the entity class name you want to manage
-       - App\Entity\BlogPost
-#        - App\Entity\Category
-#        - App\Entity\User
+    entities:
+        Category:
+            class: App\Entity\Category
+            form:
+                title: 'Add customer'
+                fields:
+                    - name
+                    - parent
