--- a/config/services.yaml
+++ b/config/services.yaml
@@ -8,6 +8,7 @@ parameters:
     twitter_url: https://twitter.com/ThenLabsOrg
     facebook_url: https://www.facebook.com/ThenLabs-110165223984090/
     telegram_url: https://t.me/thenlabs
+    app.path.admin_images: /uploads/images/admin
 
 services:
     # default configuration for services in *this* file
