--- a/config/packages/vich_uploader.yaml
+++ b/config/packages/vich_uploader.yaml
@@ -1,7 +1,7 @@
 vich_uploader:
     db_driver: orm
 
-    #mappings:
-    #    products:
-    #        uri_prefix: /images/products
-    #        upload_destination: '%kernel.project_dir%/public/images/products'
+    mappings:
+       admin_images:
+           uri_prefix: /uploads/images/admin
+           upload_destination: '%kernel.project_dir%/public/uploads/images/admin'
