--- a/config/packages/twig.yaml
+++ b/config/packages/twig.yaml
@@ -1,2 +1,7 @@
 twig:
     default_path: '%kernel.project_dir%/templates'
+    globals:
+        twitter_username: ThenLabsOrg
+        twitter_url: https://twitter.com/ThenLabsOrg
+        facebook_url: https://www.facebook.com/ThenLabs-110165223984090/
+        telegram_url: https://t.me/thenlabs
