--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -18,6 +18,8 @@ security:
             anonymous: lazy
             http_basic:
                 realm: Secured Area
+            logout:
+                path:   app_logout
 
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#firewalls-authentication
