--- a/config/packages/easy_admin.yaml
+++ b/config/packages/easy_admin.yaml
@@ -15,6 +15,17 @@ easy_admin:
                     - categories
                     - tags
 
+        Page:
+            class: App\Entity\Page
+            form:
+                fields:
+                    - title
+                    - slug
+                    - public
+                    - { property: 'content', type: 'code_editor', language: 'markdown' }
+                    - categories
+                    - tags
+
         Image:
             class: App\Entity\Image
             list:
