--- a/config/packages/easy_admin.yaml
+++ b/config/packages/easy_admin.yaml
@@ -11,6 +11,7 @@ easy_admin:
                     - title
                     - slug
                     - public
+                    - { property: 'abstract', type: 'code_editor', language: 'markdown' }
                     - { property: 'content', type: 'code_editor', language: 'markdown' }
                     - categories
                     - tags
