--- a/config/packages/easy_admin.yaml
+++ b/config/packages/easy_admin.yaml
@@ -12,6 +12,7 @@ easy_admin:
                     - slug
                     - public
                     - { property: 'language', type: 'choice', type_options: { choices: { 'Español': 'es', 'English': 'en' }, data: 'es' } }
+                    - { property: 'translations', type_options: { by_reference: false } }
                     - { property: 'abstract', type: 'code_editor', language: 'markdown' }
                     - { property: 'content', type: 'code_editor', language: 'markdown' }
                     - created
