--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,7 @@
 /.env.*.local
 /config/secrets/prod/prod.decrypt.private.php
 /public/bundles/
-/public/node_modules/
+###/public/node_modules/
 /var/
 /vendor/
 ###< symfony/framework-bundle ###
