--- a/config/packages/easy_admin.yaml
+++ b/config/packages/easy_admin.yaml
@@ -11,6 +11,7 @@ easy_admin:
                     - title
                     - slug
                     - public
+                    - ogImage
                     - { property: 'language', type: 'choice', type_options: { choices: { 'Español': 'es', 'English': 'en' } } }
                     - { property: 'translations', type_options: { by_reference: false } }
                     - { property: 'abstract', type: 'code_editor', language: 'markdown' }
