--- a/config/packages/twig.yaml
+++ b/config/packages/twig.yaml
@@ -7,3 +7,4 @@ twig:
         facebook_app_id: '1376605832728926'
         telegram_url: 'https://t.me/thenlabs'
         google_analytics_id: 'UA-163364401-1'
+        bitcoin_address: '1HkSXQsYcmM4QqzkUFsWzEcB4Zqqi32BmA'
