--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         "easycorp/easyadmin-bundle": "^2.3",
         "friendsofphp/php-cs-fixer": "^2.16",
         "knplabs/knp-markdown-bundle": "^1.8",
+        "presta/sitemap-bundle": "^2.5",
         "sensio/framework-extra-bundle": "^5.1",
         "stof/doctrine-extensions-bundle": "^1.4",
         "symfony/apache-pack": "^1.0",
